--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "revisa-AI",
   "version": "1.0.0",
   "description": "API simples que gera perguntas e resumos usando a API do Gemini",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js"
   },
   "keywords": ["api", "gemini", "quiz", "node"],
   "author": "",
