--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   ],
   "routes": [
     {
-      "src": "/api",
+      "src": "/api$",
       "dest": "/api/index.js"
     },
     {
@@ -20,8 +20,18 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/index.js"
     }
   ]
 }
