--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,11 @@
     {
       "src": "api/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/api$",
+      "src": "/api",
       "dest": "/api/index.js"
     },
     {
@@ -20,18 +16,12 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/",
-      "dest": "/public/index.html"
+      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico))",
+      "dest": "/public/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/index.js"
+      "src": "/",
+      "dest": "/public/index.html"
     }
   ]
 }
