--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "API e frontend do Revisa-AI",
   "main": "api/index.js",
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   },
   "scripts": {
-    "start": "node api/server.js",
-    "dev": "node api/server.js"
+    "start": "node test-local.js",
+    "dev": "node test-local.js"
   },
   "dependencies": {
     "express": "^4.18.2",
