--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,19 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {  "src": "/(.*)",
+      "dest": "/public/*"
+    },
+     {
       "src": "/api",
       "dest": "/api/index.js"
     },
     {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
-    },
-    {
-      "src": "/",
-      "dest": "/public/index.html"
     }
   ]
 }
