--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "/api/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "public/**",
+      "src": "/public/**",
       "use": "@vercel/static"
     }
   ],
