--- a/vercel.json
+++ b/vercel.json
@@ -2,29 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "/api/index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "/public/**",
+      "src": "public/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/public/index.html"
-    },
-    {  "src": "/(.*)",
-      "dest": "/public/*"
-    },
-     {
-      "src": "/api",
-      "dest": "/api/index.js"
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "src": "/",
+      "dest": "public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "public/$1"
     }
   ]
 }
